# stock

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
agent/: README.md  RUN_STATUS.md  agent-1-coder.md  agent-2-researcher.md  agent-3-tester.md
cmake/: MyIoTBootstrapHelpers.cmake  MyIoTFastDDS.cmake  MyIoTFastDDSBootstrap.cmake  MyIoTOpenSSL.cmake  MyIoTOpenTelemetry.cmake  MyIoTOpenTelemetryBootstrap.cmake  MyIoTPoco.cmake  MyIoTPocoBootstrap.cmake  MyIoTThirdPartyCommon.cmake  PatchFoonathanGetContainerNodeSizes.cmake  PocoCompat.cmake  StokPythonBundle.cmake
cmake/poco-bootstrap/: CMakeLists.txt
docs/: stok-overview.md
platform/CodeGeneration/: CMakeLists.txt
platform/OSP/: CMakeLists.txt
platform/OSP/ActiveRecord/: CMakeLists.txt
platform/OSP/BundleAdmin/: CMakeLists.txt
platform/OSP/BundleCreator/: CMakeLists.txt
platform/OSP/CodeCacheUtility/: CMakeLists.txt
platform/OSP/Core/: CMakeLists.txt
platform/OSP/Crypto/: CMakeLists.txt
platform/OSP/Data/: CMakeLists.txt
platform/OSP/Data/SQLite/: CMakeLists.txt
platform/OSP/Net/: CMakeLists.txt
platform/OSP/NetSSL_OpenSSL/: CMakeLists.txt
platform/OSP/StripBundle/: CMakeLists.txt
platform/OSP/Unit/: CMakeLists.txt
platform/OSP/include/Poco/OSP/: BundleContext.h
platform/OSP/src/: BundleContext.cpp  BundleLoader.cpp  CodeCache.cpp
platform/OpenTelemetry/: CMakeLists.txt
platform/OpenTelemetry/include/Poco/OpenTelemetry/: OpenTelemetry.h  TelemetryClient.h  TelemetryHelpers.h  TelemetryLoggingChannel.h  TelemetryModel.h  TelemetryService.h
platform/OpenTelemetry/src/: TelemetryClient.cpp  TelemetryLoggingChannel.cpp  TelemetryService.cpp
server/: CMakeLists.txt  macchina.properties  macchina.properties.install  settings.properties.example
server/src/: MacchinaServer.cpp
services/: CMakeLists.txt
services/common/include/stok/services/common/: HostedViewPublisher.h  LocalizationClient.h  ServiceConfig.h  StockQuoteBus.h  TelemetryBootstrap.h  TextMessageBus.h
services/common/src/: HostedViewPublisher.cpp  LocalizationClient.cpp  ServiceConfig.cpp  StockQuoteBus.cpp  TelemetryBootstrap.cpp  TextMessageBus.cpp
services/config/: config-center.properties  data-hub.properties  desktop-shell.properties  log-viewer.properties  market-board.properties  market-data-service.properties  portfolio-board.properties  risk-backtest.properties  trade-alerts.properties  valuation-research.properties
services/config-center/qml/: Main.qml
services/config-center/src/: ConfigCenterController.cpp  ConfigCenterController.h  main.cpp
services/data-hub/qml/: Main.qml
services/data-hub/src/: DataHubController.cpp  DataHubController.h  main.cpp
services/desktop-shell/qml/: Main.qml
services/desktop-shell/src/: DesktopShellController.cpp  DesktopShellController.h  LocalizationController.cpp  LocalizationController.h  ProcessMenuModel.cpp  ProcessMenuModel.h  QuoteListModel.cpp  QuoteListModel.h  main.cpp
services/feature-page/include/stok/services/feature_page/: FeaturePageRunner.h
services/feature-page/src/: FeaturePageRunner.cpp
services/log-viewer/qml/: Main.qml
services/log-viewer/src/: LogProcessModel.cpp  LogProcessModel.h  LogViewerController.cpp  LogViewerController.h  main.cpp
services/market-board/qml/: Main.qml
services/market-board/src/: InstitutionRankingModel.cpp  InstitutionRankingModel.h  InvestmentOpportunityModel.cpp  InvestmentOpportunityModel.h  MarketBoardBridge.cpp  MarketBoardBridge.h  MarketBoardController.cpp  MarketBoardController.h  MarketBoardTypes.h  UsMarketWatchModel.cpp  UsMarketWatchModel.h  WealthProductModel.cpp  WealthProductModel.h  main.cpp
services/market-data-service/src/: main.cpp
services/portfolio-board/qml/: Main.qml
services/portfolio-board/src/: HoldingsModel.cpp  HoldingsModel.h  PortfolioController.cpp  PortfolioController.h  PortfolioTypes.h  main.cpp
services/risk-backtest/qml/: Main.qml
services/risk-backtest/src/: RiskBacktestController.cpp  RiskBacktestController.h  main.cpp
services/trade-alerts/qml/: Main.qml
services/trade-alerts/src/: TradeAlertsController.cpp  TradeAlertsController.h  main.cpp
services/valuation-research/qml/: Main.qml
services/valuation-research/src/: ValuationResearchController.cpp  ValuationResearchController.h  main.cpp
tools/: free_data_provider.py  fund_holdings_provider.py  market_overview_provider.py  us_history_provider.py  valuation_research_provider.py  value_board_provider.py
